Fixed main overlapping with footer

--- a/src/css/faq.scss
+++ b/src/css/faq.scss
@@ -2,7 +2,7 @@
 
 main {
     padding-top:3rem;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     h2 {
         color: $red-brown;
